--- a/app/src/main/res/layout/activity_event_post.xml
+++ b/app/src/main/res/layout/activity_event_post.xml
@@ -65,29 +65,53 @@
                 app:srcCompat="@drawable/clock" />
 
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
+                android:weightSum="1"
                 android:paddingLeft="15dp"
-                android:weightSum="1">
+                android:layout_weight="0.5">
 
                 <TextView
                     android:id="@+id/event_post_start_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:gravity="center_vertical"
+                    android:textSize="15sp"
+                    android:text="00:00AM"/>
+
+                <TextView
+                    android:id="@+id/event_post_end_time"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:gravity="center_vertical"
+                    android:textSize="15sp"
+                    android:text="00:00AM"/>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                android:weightSum="1"
+                android:layout_weight="0.5">
+
+                <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
-                    android:clickable="true"
                     android:contextClickable="false"
                     android:gravity="center_vertical"
                     android:text="@string/start_time_post"
                     android:textSize="15sp" />
 
                 <TextView
-                    android:id="@+id/event_post_end_time"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.5"
-                    android:clickable="true"
                     android:gravity="center_vertical"
                     android:text="@string/end_time_post"
                     android:textSize="15sp" />
