--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,9 +4,5 @@
     <color name="colorPrimaryDark">#29746b</color>
     <color name="colorAccent">#951f48</color>
     <color name="circular_text_view_solid_color">#9FE554</color>
-    <color name="dark_blue_color">#17659c</color>
-    <color name="yellow_color">#ffcd00</color>
-    <color name="green_color">#2e8245</color>
-    <color name="light_purple">#de0adb</color>
-    <color name="red_color">#de0a27</color>
+    <color name="yellow_color">#d8c316</color>
 </resources>
