--- a/app/src/main/res/layout/activity_event_post.xml
+++ b/app/src/main/res/layout/activity_event_post.xml
@@ -2,7 +2,8 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_below="@+id/event_post_app_bar_layout">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -13,10 +14,9 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:text="@string/event_post_name"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:layout_marginBottom="10dp"/>
+            android:textColor="@color/colorPrimary" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -26,7 +26,7 @@
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@drawable/nametag" />
+                android:src="@drawable/edit_tag" />
 
             <EditText
                 android:id="@+id/event_post_name"
@@ -41,17 +41,16 @@
             android:layout_height="1dip"
             android:layout_alignParentTop="true"
             android:layout_centerVertical="true"
-            android:background="@color/mdtp_accent_color"
+            android:layout_marginBottom="10dp"
             android:layout_marginTop="10dp"
-            android:layout_marginBottom="10dp"/>
+            android:background="@color/gray_color" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:text="@string/time_post"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:layout_marginBottom="10dp"/>
+            android:textColor="@color/colorPrimary" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -62,7 +61,7 @@
                 android:id="@+id/imageView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:srcCompat="@drawable/clock" />
+                app:srcCompat="@drawable/time" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -125,17 +124,16 @@
             android:layout_height="1dip"
             android:layout_alignParentTop="true"
             android:layout_centerVertical="true"
-            android:background="@color/mdtp_accent_color"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:background="@color/gray_color" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:text="@string/schedule_post"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:layout_marginBottom="10dp"/>
+            android:textColor="@color/colorPrimary" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -263,17 +261,16 @@
             android:layout_height="1dip"
             android:layout_alignParentTop="true"
             android:layout_centerVertical="true"
-            android:background="@color/mdtp_accent_color"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:background="@color/gray_color" />
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
             android:text="@string/ringer_post"
-            android:textColor="@color/colorPrimary"
-            android:textSize="20sp"
-            android:layout_marginBottom="10dp"/>
+            android:textColor="@color/colorPrimary" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -310,12 +307,6 @@
             </RadioGroup>
 
         </LinearLayout>
-
-        <Button
-            android:id="@+id/event_post_save_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Save" />
 
     </LinearLayout>
 
