--- a/app/src/main/res/layout/activity_event_post_action_bar.xml
+++ b/app/src/main/res/layout/activity_event_post_action_bar.xml
@@ -5,35 +5,34 @@
     android:layout_height="match_parent"
     android:layout_gravity="fill_horizontal" >
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="?attr/actionBarSize"
-        android:divider="@drawable/divider"
-        android:dividerPadding="8dp"
-        android:orientation="horizontal"
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="?attr/actionBarSize"-->
+        <!--android:dividerPadding="8dp"-->
+        <!--android:orientation="horizontal"-->
+        <!--android:showDividers="end">-->
+
+    <TextView
+        android:id="@+id/event_post_add_event"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:showDividers="end">
-
-        <TextView
-            android:id="@+id/event_post_add_event"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="?attr/selectableItemBackground"
-            android:drawableLeft="@drawable/check"
-            android:drawablePadding="8dp"
-            android:gravity="center_vertical"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
-            android:text="Add Event"
-            android:textAllCaps="true" />
-
-    </LinearLayout>
+        android:background="?attr/selectableItemBackground"
+        android:drawableLeft="@drawable/check"
+        android:gravity="center_vertical"
+        android:padding="8dp"
+        android:text="\tAdd Event"
+        android:textAllCaps="true"
+        android:textSize="17sp" />
 
     <ImageView
         android:id="@+id/event_post_cancel_event"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/close"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:padding="8dp"
+        app:srcCompat="@drawable/close" />
+
+    <!--</LinearLayout>-->
 
 </RelativeLayout>
