changed snackbar message color

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,7 @@
     <color name="colorPrimaryDark">#29746b</color>
     <color name="colorAccent">#951f48</color>
     <color name="circular_text_view_solid_color">#9FE554</color>
-    <color name="yellow_color">#d8c316</color>
+    <color name="white_color">#FFF</color>
     <color name="gray_color">#9a9a9a</color>
     <color name="red_color">#FF0000</color>
 </resources>
